--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1"
 clap = { version = "4.0", features = ["derive"] }
-mhg = { path = "../mhg" }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
